# MGE

./: CMakeLists.txt  README.md
cmake/: config.cmake  macros.cmake
cmake/Modules/: FindSFML.cmake
examples/: CMakeLists.txt
examples/basictest/: CMakeLists.txt
examples/basictest/src/: App.cpp  App.hpp  GameState.cpp  GameState.hpp  SplashState.cpp  SplashState.hpp  main.cpp
examples/pacman/: CMakeLists.txt
examples/pacman/src/: App.cpp  App.hpp  Food.cpp  Food.hpp  GameState.cpp  GameState.hpp  Ghost.cpp  Ghost.hpp  HudBoard.cpp  HudBoard.hpp  InitState.cpp  InitState.hpp  Pacman.cpp  Pacman.hpp  SplashState.cpp  SplashState.hpp  TileEntity.cpp  TileEntity.hpp  main.cpp  pacman_define.hpp
include/MGE/: Tile_include.hpp
include/MGE/Core/: Core_types.hpp
include/MGE/Core/assets/: FontAsset.hpp  FontHandler.hpp  MusicAsset.hpp  MusicHandler.hpp  SoundAsset.hpp  SoundHandler.hpp  TextureAsset.hpp  TextureHandler.hpp
include/MGE/Core/classes/: AssetManager.hpp  StatManager.hpp  StateManager.hpp
include/MGE/Core/interfaces/: IApp.hpp  IAssetHandler.hpp  ILogger.hpp  IState.hpp  TAsset.hpp  TAssetHandler.hpp
include/MGE/Core/loggers/: FatalLogger.hpp  FileLogger.hpp  Log.hpp  ScopeLogger.hpp  StringLogger.hpp
include/MGE/Core/utils/: CFilter.hpp  FilePathContainer.h
include/MGE/Tile/: CAnimation.h  CArea.h  CBoss.h  CCamera.h  CEntity.h  CEvent.h  CFilter.h  CMap.h  CPlayer.h  CTile.h  Define.h
include/mge/: Core_include.hpp
resources/gfx/: map.txt
src/MGE/: CMakeLists.txt
src/MGE/Core/: CMakeLists.txt  core_types.cpp
src/MGE/Core/assets/: FontAsset.cpp  FontHandler.cpp  MusicAsset.cpp  MusicHandler.cpp  SoundAsset.cpp  SoundHandler.cpp  TextureAsset.cpp  TextureHandler.cpp
src/MGE/Core/classes/: AssetManager.cpp  StatManager.cpp  StateManager.cpp
src/MGE/Core/interfaces/: IApp.cpp  IAssetHandler.cpp  ILogger.cpp  IState.cpp
src/MGE/Core/loggers/: FatalLogger.cpp  FileLogger.cpp  ScopeLogger.cpp  StringLogger.cpp
src/MGE/Core/utils/: CFilter.cpp  FilePathContainer.cpp
src/MGE/Tile/: CAnimation.cpp  CArea.cpp  CBoss.cpp  CCamera.cpp  CEntity.cpp  CEvent.cpp  CFilter.cpp  CMakeLists.txt  CMap.cpp  CPlayer.cpp  CTile.cpp  EntityCol.cpp
